--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -19,4 +19,22 @@
         font-size: 19px;
         font-weight: 500;
     }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        list-style: none;
+    }
+
+    &__icon {
+        margin-right: 10px;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: #A4A6B3;
+        font-size: 17px;
+    }
+
 }
