--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .app-container {
+  display: flex;
+  background-color: whitesmoke;
   height: 100vh;
-  width: 100vw;
+  overflow-y: hidden;
+  overflow-x: hidden ;
 }
