--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,12 +1,13 @@
 
 .dashboard {
     height: 100%;
-    max-width: 255px;
+    width: 282px;
     background-color: #363740;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
     &__header {
         padding: 20px 30px;
+        width: 100%;
     }
 
     &__logo {
