--- a/src/modules/Templates/Sidebar.scss
+++ b/src/modules/Templates/Sidebar.scss
@@ -1,7 +1,15 @@
 .sidebar {
     width: 200px;
-    height: 550px;
     background-color: white;
     border-radius: 15px;
     margin-left: 50px;
+
+    &__list {
+        list-style: none;
+    }
+    
+    &__item {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
 }
