--- a/src/modules/Templates/Sidebar.scss
+++ b/src/modules/Templates/Sidebar.scss
@@ -1,15 +1,17 @@
 .sidebar {
     width: 200px;
+    height: 80%;
     background-color: white;
     border-radius: 15px;
     margin-left: 50px;
 
     &__list {
+        padding-top: 20px;
         list-style: none;
     }
     
     &__item {
-        font-size: 16px;
+        font-size: 19px;
         margin-bottom: 10px;
     }
 }
