--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,24 +1,44 @@
+@import "/src/styles/fonts.scss";
+@import "/src/styles/mixvar.scss";
+
 
 .dashboard {
     height: 100%;
-    width: 282px;
-    background-color: #363740;
+    width: 231px;
+    background-color: #FAFAFA;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
     &__header {
-        padding: 20px 30px;
+        position: relative;
+        display: flex;
+        padding: 20px 20px;
         width: 100%;
+        margin-bottom: 60px;
     }
 
     &__logo {
-        width: 35px;
-        height: 35px;
+        width: 54px;
+        height: 54px;
     }
 
     &__title {
-        color: #A4A6B3;
-        font-size: 19px;
-        font-weight: 500;
+        position: absolute;
+        top: 11px;
+        left: 83px;
+        color: $main-green;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 18px;
+        line-height: 22px;
+        font-weight: 600;
+        
+    }
+
+    &__list-title {
+        margin-left: 20px;
+        font-family: 'Nunito', sans-serif;
+        color: $main-green;
+        font-size: 24px;
+        line-height: 33px;
     }
 
     &__list {
